# domain-forge

./: .eslintrc.json  .git-commands  .pre-commit-config.yaml  README.md  conftest.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  tatus  test.db  tsconfig.json  typedoc.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  documentation.yml
.storybook/: main.ts  preview.tsx
config/: settings.py
docs/: architecture-specification.md  backend-container-diagram.md  cli-documentation.md  container-diagram.md  database-container-diagram.md  dsl-documentation.md  dsl-specification.md  frontend-container-diagram.md  gen_ref_pages.py  index.md  plugins.md  system-context-diagram.md
docs/api/: SUMMARY.md  backend.md  frontend.md
docs/api/domainforge/: cli.md  index.md
docs/ui/: components.md
docs/wip/: execution-list.md
domainforge/: App.tsx  __init__.py  __main__.py  cli.py  config.py  validation.py
domainforge/api/: models.py
domainforge/api/controllers/: chat_controller.py  entity_controller.py
domainforge/application/: __init__.py
domainforge/application/services/: __init__.py  entity_service.py
domainforge/application/use_cases/: __init__.py  entity_use_case.py
domainforge/cli/: __init__.py  main.py
domainforge/config/: settings.py
domainforge/core/: __init__.py  ai_client.py  code_generation.py  grammar.lark  interpreter.py  models.py  parser.py  transformer.py
domainforge/domain/: __init__.py
domainforge/domain/models/: __init__.py  entity.py  ui_component.py
domainforge/domain/repositories/: __init__.py  entity_repository.py
domainforge/frontend/: App.tsx  ChatInterface.test.tsx  ChatInterface.tsx  DomainModelVisualizer.stories.tsx  DomainModelVisualizer.test.tsx  DomainModelVisualizer.tsx
domainforge/frontend/test/: setup.ts
domainforge/generators/: __init__.py  base_generator.py  code_generator.py  python_backend_generator.py  typescript_frontend_generator.py
domainforge/infrastructure/: __init__.py  app.py  database.py  dependencies.py  json_file_repository.py
domainforge/infrastructure/repositories/: __init__.py  entity_repository.py
domainforge/plugins/: __init__.py  base.py  base_plugin.py  command.py  config.py  discovery.py  plugin.py  plugin_manager.py  registry.py  template_loader.py  template_plugin.py  validator.py
domainforge/plugins/base_template/: __init__.py  plugin.yaml
domainforge/plugins/default_validator/: __init__.py  plugin.yaml
domainforge/plugins/example_template/: __init__.py  plugin.yaml
scratch/: info.md
scripts/: cleanup_cache.py
src/: App.tsx  __init__.py  __main__.py  cli.py  main.tsx
src/api/: models.py
src/api/controllers/: entity_controller.py
src/config/: settings.py
src/core/: grammar.lark  interpreter.py  models.py  parser.py  transformer.py
src/generators/: base_generator.py  python_backend_generator.py  typescript_frontend_generator.py
src/infrastructure/: app.py  database.py  dependencies.py
templates/domain/: entity.py.j2
templates/typescript/app/: App.tsx.j2
tests/: conftest.py
tests/application/: test_service.py
tests/bdd/: test_user_stories.py  user_stories.feature
tests/domain/: test_entity.py
tests/features/: code_generation.feature  plugin_templates.feature
tests/infrastructure/: test_repository.py
tests/integration/: mock_plugin.py  test_api.py  test_app_generation.py  test_chat_api.py  test_cli_plugins.py  test_enhanced_ui_integration.py  test_integration.py  test_navigation_flow_integration.py  test_plugin_system.py  test_template_plugins_integration.py
tests/unit/: test_ai_client.py  test_debug.py  test_domain_elicitation.py  test_domain_model_builder.py  test_dsl_generator.py  test_enhanced_ui_generation.py  test_enhanced_ui_grammar.py  test_enhanced_ui_model.py  test_example_template_plugin.py  test_grammar.py  test_interpreter.py  test_parser.py  test_parser_navigation_flow.py  test_template_loader.py  test_transformer.py  test_ui_component_model.py
(+63 files in other folders)
